--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN" ng-app="factoryVehicle">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>厂车管理系统</title>
+	<link rel="stylesheet" href="framework/bootstrap/css/bootstrap.min.css">
+	<script type="text/javascript" src="framework/jquery-2.2.3.min.js"></script>
+	<script type="text/javascript" src="framework/angular.min.js"></script>
+	<script type="text/javascript" src="framework/angular-animate.min.js"></script>
+	<script type="text/javascript" src="framework/angular-ui-router.js"></script>
+
+	<link rel="stylesheet" type="text/css" href="css/init.css">
+	<link rel="stylesheet" type="text/css" href="css/login.css">
+	<link rel="stylesheet" type="text/css" href="css/admin.css">
+	<script type="text/javascript" src='js/app.js'></script>
 </head>
 <body>
-	hello
+	<div ui-view style="width:100%; height:100%;">
+	</div>
 </body>
 </html>
