--- a/src/main/webapp/public/htm/adminShowAllStations.html
+++ b/src/main/webapp/public/htm/adminShowAllStations.html
@@ -1,16 +1,21 @@
 <div id="map-stations"></div>
 <div id="station-table">
 	<div class="search-station">
-		<input type="text" placeholder="请输入要查询的站点信息" ng-model="searchCondition">
+		<input type="text" placeholder="请输入要查询的站点/停车点信息" ng-model="searchCondition">
 		<div class="search-action" ng-click="searchStation()">
 			<i class="material-icons md-light md-36">search</i>
 		</div>
 	</div>
-	<div class="search-result">
+
+	<div id="panel-level01" class="panel">
+		<div class="goback" ng-click="showLevel07()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">进行站点智能规划</a>
+		</div>
 		<ul class="collapsible" data-collapsible="accordion">
-			<li class="search-station-result" style="display:none;">
+			<li>
 				<div class="collapsible-header">
-					<a href="javascript:void(0)">共找到<strong>0</strong>个搜索结果</a>
+					<a href="javascript:void(0)">目前，共有<strong>47</strong>个站点</a>
 				</div>
 				<div class="collapsible-body">
 					<ul class="collection">
@@ -20,22 +25,183 @@
 			</li>
 			<li>
 				<div class="collapsible-header">
-					<a href="javascript:void(0)">查看所有站点</a>
+					<a href="javascript:void(0)">目前共有<strong>108</strong>个停车点</a>
 				</div>
 				<div class="collapsible-body">
 					<ul class="collection">
-						<li class="collection-item" ng-repeat="station in stations" ng-bind="station.name" ng-click="reflectMarker(station.id)"></li>
+						<li class="collection-item" ng-repeat="station in searchResult" ng-bind="station.name" ng-click="reflectMarker(station.id)"></li>
 					</ul>
 				</div>
 			</li>
 		</ul>
 	</div>
+
+	<div id="panel-level02" class="panel" style="display:none;">
+		<div class="goback" ng-click="showLevel01()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">返回查看全部站点和停车点</a>
+		</div>
+		<ul class="collapsible" data-collapsible="accordion">
+			<li>
+				<div class="collapsible-header">
+					<a href="javascript:void(0)">共找到<strong>13</strong>条搜索结果</a>
+				</div>
+				<div class="collapsible-body">
+					<ul class="collection">
+						<li class="collection-item" ng-repeat="station in searchResult" ng-bind="station.name" ng-click="reflectMarker(station.id)"></li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+	</div>
+
+	<div id="panel-level03" class="panel" style="display:none;">
+		<div class="goback" ng-click="showLevel01()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">返回查看全部站点和停车点</a>
+		</div>
+		<div class="card blue-grey darken-1">
+			<div class="card-content white-text">
+				<span class="card-title">杭州列车东站</span>
+				<br>
+				<span class="col row s12">编号：<strong>2016003</strong></span>
+				<span class="col row s12">名称：<strong>杭州列车东站</strong></span>
+				<span class="col row s12">地址：<strong>杭州电子科技大学生活区南门</strong></span>
+				<span class="col row s12">乘车人数：<strong>68</strong></span>
+			</div>
+			<div class="card-action">
+				<a href="javascript:void(0)">删除</a>
+				<a href="javascript:void(0)">修改</a>
+				<a href="javascript:void(0)">查看乘车人员</a>
+			</div>
+		</div>
+	</div>
+
+	<div id="panel-level04" class="panel" style="display:none;">
+		<div class="goback" ng-click="showLevel02()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">返回查看搜索结果</a>
+		</div>
+		<div class="card blue-grey darken-1">
+			<div class="card-content white-text">
+				<span class="card-title">杭州列车东站</span>
+				<br>
+				<span class="col row s12">编号：<strong>2016003</strong></span>
+				<span class="col row s12">名称：<strong>杭州列车东站</strong></span>
+				<span class="col row s12">地址：<strong>杭州电子科技大学生活区南门</strong></span>
+				<span class="col row s12">乘车人数：<strong>68</strong></span>
+			</div>
+			<div class="card-action">
+				<a href="javascript:void(0)">删除</a>
+				<a href="javascript:void(0)">修改</a>
+				<a href="javascript:void(0)">查看乘车人员</a>
+			</div>
+		</div>
+	</div>
+
+	<div id="panel-level05" class="panel" style="display:none;">
+		<div class="goback" ng-click="showLevel01()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">返回查看全部站点和停车点</a>
+		</div>
+		<div class="card blue-grey darken-1">
+			<div class="card-content white-text">
+				<span class="card-title">杭州列车停车点</span>
+				<br>
+				<span class="col row s12">编号：<strong>2016003</strong></span>
+				<span class="col row s12">名称：<strong>杭州列车停车点</strong></span>
+				<span class="col row s12">地址：<strong>杭州电子科技大学生活区南门</strong></span>
+			</div>
+			<div class="card-action">
+				<a href="javascript:void(0)">删除</a>
+				<a href="javascript:void(0)">修改</a>
+				<a href="javascript:void(0)">设置为站点</a>
+			</div>
+		</div>
+	</div>
+
+	<div id="panel-level06" class="panel" style="display:none;">
+		<div class="goback" ng-click="showLevel02()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">返回查看搜索结果</a>
+		</div>
+		<div class="card blue-grey darken-1">
+			<div class="card-content white-text">
+				<span class="card-title">杭州列车停车点</span>
+				<br>
+				<span class="col row s12">编号：<strong>2016003</strong></span>
+				<span class="col row s12">名称：<strong>杭州列车停车点</strong></span>
+				<span class="col row s12">地址：<strong>杭州电子科技大学生活区南门</strong></span>
+			</div>
+			<div class="card-action">
+				<a href="javascript:void(0)">删除</a>
+				<a href="javascript:void(0)">修改</a>
+				<a href="javascript:void(0)">设置为站点</a>
+			</div>
+		</div>
+	</div>
+
+	<div id="panel-level07" class="panel" style="display:none;">
+		<div class="goback" ng-click="showLevel01()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">返回查看全部站点和停车点</a>
+		</div>
+		<ul class="collapsible" data-collapsible="accordion">
+			<li>
+				<div class="collapsible-header active">
+					<a href="javascript:void(0)">规划方案</a>
+				</div>
+				<div class="collapsible-body">
+					<table class="highlight centered">
+						<thead>
+							<tr>
+								<td style="text-align:center;">站点名称</td>
+								<td style="text-align:center;">站点地址</td>
+								<td style="text-align:center;">人数</td>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>杭电站</td>
+								<td>杭州电子科技大学南门</td>
+								<td>48</td>
+							</tr>
+							<tr>
+								<td>杭电站</td>
+								<td>杭州电子科技大学南门</td>
+								<td>48</td>
+							</tr>
+							<tr>
+								<td>杭电站</td>
+								<td>杭州电子科技大学南门</td>
+								<td>48</td>
+							</tr>
+							<tr>
+								<td>杭电站</td>
+								<td>杭州电子科技大学南门</td>
+								<td>48</td>
+							</tr>
+							<tr>
+								<td>杭电站</td>
+								<td>杭州电子科技大学南门</td>
+								<td>48</td>
+							</tr>
+						</tbody>
+					</table>
+					<div class="submit-plan">
+						<a href="javascript:void(0)">一键规划</a>
+					</div>
+				</div>
+			</li>
+		</ul>
+	</div>
+
 </div>
-<div id="station-staff" style="display:none;">
+<!-- <div id="station-staff" style="display:none;">
 	<ul class="collapsible" data-collapsible="accordion">
 		<li>
 			<div class="collapsible-header">
-				<a href="javascript:void(0)">共找到<strong>0</strong>位员工</a>
+				<a href="javascript:void(0)">共找到<strong ng-bind="staStaffList.length"></strong>位员工</a>
 			</div>
 			<div class="collapsible-body">
 				<table>
@@ -55,7 +221,7 @@
 			</div>
 		</li>
 	</ul>
-</div>
+</div> -->
 
 <div id="delete-station" class="modal" style="width:220px;">
 	<div class="modal-content">
@@ -120,7 +286,7 @@
 	</div>
 </div>
 
-<div id="sta-staff-date" class="modal" style="width:200px;">
+<div id="sta-staff-date" class="modal" style="width:300px;height:600px;">
 	<div class="modal-content">
 		<form class="row">
 			<div class="input-field col s12">
@@ -134,6 +300,33 @@
 	</div>
 </div>
 
+<div id="success-delete" class="modal">
+	<div class="modal-content">
+		<p>删除站点成功！</p>
+	</div>
+	<div id="modal-footer">
+		<a href="javascrit:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
+	</div>
+</div>
+
+<div id="success-update" class="modal">
+	<div class="modal-content">
+		<p>修改站点成功！</p>
+	</div>
+	<div id="modal-footer">
+		<a href="javascrit:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
+	</div>
+</div>
+
+<div id="success-add" class="modal">
+	<div class="modal-content">
+		<p>添加站点成功！</p>
+	</div>
+	<div id="modal-footer">
+		<a href="javascrit:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
+	</div>
+</div>
+
 <script type="text/javascript">
 	$(function(){
 		$('.collapsible').collapsible();
@@ -141,5 +334,6 @@
 			selectMonths: true,
 			selectYears: 15
 		});
+		$('select').material_select();
 	})
 </script>
