--- a/src/main/webapp/public/htm/affairsSchedual.html
+++ b/src/main/webapp/public/htm/affairsSchedual.html
@@ -1,1 +1,141 @@
-排班视图
+<div id="affairs-schedual">
+	<div class="heading">
+		<p>本周(2016.7.11~2016.7.17)排班表</p>
+		<div class="date-chose">
+			<div class="last-week week-btn">
+				<i class="material-icons md-dark center">keyboard_arrow_left</i>
+			</div>
+			<div class="now-week week-btn">
+				<i class="material-icons">event_note</i>
+			</div>
+			<div class="next-week week-btn">
+				<i class="material-icons">keyboard_arrow_right</i>
+			</div>
+		</div>
+	</div>
+	<div class="body">
+		<div class="schedual-title">
+			<ul class="collection collection1 center">
+				<li class="collection-item">7.11<br>星期一</li>
+			</ul>
+			<ul class="collection collection2 center">
+				<li class="collection-item">7.12<br>星期二</li>
+			</ul>
+			<ul class="collection collection3 center">
+				<li class="collection-item">7.13<br>星期三</li>
+			</ul>
+			<ul class="collection collection4 center">
+				<li class="collection-item">7.11<br>星期四</li>
+			</ul>
+			<ul class="collection collection5 center">
+				<li class="collection-item">7.11<br>星期五</li>
+			</ul>
+			<ul class="collection collection6 center">
+				<li class="collection-item">7.11<br>星期六</li>
+			</ul>
+			<ul class="collection collection7 center">
+				<li class="collection-item">7.11<br>星期日</li>
+			</ul>
+		</div>
+		<div class="schedual-content">
+			<ul class="collection collection1">
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅nima全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+			</ul>
+			<ul class="collection collection2">
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅nima全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+			</ul>
+			<ul class="collection collection3">
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅nima全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+			</ul>
+			<ul class="collection collection4">
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅nima全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+			</ul>
+			<ul class="collection collection5">
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅nima全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+			</ul>
+			<ul class="collection collection6">
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅nima全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+			</ul>
+			<ul class="collection collection7">
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅nima全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+				<li class="collection-item center">帅全</li>
+			</ul>
+		</div>
+	</div>
+</div>
