--- a/src/main/webapp/public/htm/adminShowAllStations.html
+++ b/src/main/webapp/public/htm/adminShowAllStations.html
@@ -15,21 +15,21 @@
 		<ul class="collapsible" data-collapsible="accordion">
 			<li>
 				<div class="collapsible-header">
-					<a href="javascript:void(0)">目前，共有<strong>47</strong>个站点</a>
+					<a href="javascript:void(0)">目前，共有<strong ng-bind="stations.length"></strong>个站点</a>
 				</div>
 				<div class="collapsible-body">
 					<ul class="collection">
-						<li class="collection-item" ng-repeat="station in searchResult" ng-bind="station.name" ng-click="reflectMarker(station.id)"></li>
+						<li class="collection-item" ng-repeat="station in stations" ng-bind="station.name" ng-click="showStation($index)"></li>
 					</ul>
 				</div>
 			</li>
 			<li>
 				<div class="collapsible-header">
-					<a href="javascript:void(0)">目前共有<strong>108</strong>个停车点</a>
+					<a href="javascript:void(0)">目前，共有<strong ng-bind="altermativeStations.length"></strong>个停车点</a>
 				</div>
 				<div class="collapsible-body">
 					<ul class="collection">
-						<li class="collection-item" ng-repeat="station in searchResult" ng-bind="station.name" ng-click="reflectMarker(station.id)"></li>
+						<li class="collection-item" ng-repeat="station in altermativeStations" ng-bind="station.name" ng-click="showStopStation($index)"></li>
 					</ul>
 				</div>
 			</li>
@@ -44,11 +44,11 @@
 		<ul class="collapsible" data-collapsible="accordion">
 			<li>
 				<div class="collapsible-header">
-					<a href="javascript:void(0)">共找到<strong>13</strong>条搜索结果</a>
+					<a href="javascript:void(0)">共找到<strong ng-bind="searchReasult.length"></strong>条搜索结果</a>
 				</div>
 				<div class="collapsible-body">
 					<ul class="collection">
-						<li class="collection-item" ng-repeat="station in searchResult" ng-bind="station.name" ng-click="reflectMarker(station.id)"></li>
+						<li class="collection-item" ng-repeat="station in searchResult" ng-bind="station.name" ng-click="showStation2($index)"></li>
 					</ul>
 				</div>
 			</li>
@@ -62,17 +62,17 @@
 		</div>
 		<div class="card blue-grey darken-1">
 			<div class="card-content white-text">
-				<span class="card-title">杭州列车东站</span>
+				<span class="card-title" ng-bind="stationInfo.name"></span>
 				<br>
-				<span class="col row s12">编号：<strong>2016003</strong></span>
-				<span class="col row s12">名称：<strong>杭州列车东站</strong></span>
-				<span class="col row s12">地址：<strong>杭州电子科技大学生活区南门</strong></span>
-				<span class="col row s12">乘车人数：<strong>68</strong></span>
+				<span class="col row s12">编号：<strong ng-bind="stationInfo.id"></strong></span>
+				<span class="col row s12">名称：<strong ng-bind="stationInfo.name"></strong></span>
+				<span class="col row s12">地址：<strong ng-bind="stationInfo.address"></strong></span>
+				<span class="col row s12">乘车人数：<strong ng-bind="stationInfo.num"></strong></span>
 			</div>
 			<div class="card-action">
-				<a href="javascript:void(0)">删除</a>
-				<a href="javascript:void(0)">修改</a>
-				<a href="javascript:void(0)">查看乘车人员</a>
+				<a href="javascript:void(0)" class="card-delete">删除</a>
+				<a href="javascript:void(0)" class="card-update">修改</a>
+				<a href="javascript:void(0)" ng-click="showLevel08()">查看乘车人员</a>
 			</div>
 		</div>
 	</div>
@@ -84,17 +84,17 @@
 		</div>
 		<div class="card blue-grey darken-1">
 			<div class="card-content white-text">
-				<span class="card-title">杭州列车东站</span>
+				<span class="card-title" ng-bind="stationInfo.name"></span>
 				<br>
-				<span class="col row s12">编号：<strong>2016003</strong></span>
-				<span class="col row s12">名称：<strong>杭州列车东站</strong></span>
-				<span class="col row s12">地址：<strong>杭州电子科技大学生活区南门</strong></span>
-				<span class="col row s12">乘车人数：<strong>68</strong></span>
+				<span class="col row s12">编号：<strong ng-bind="stationInfo.id"></strong></span>
+				<span class="col row s12">名称：<strong ng-bind="stationInfo.name"></strong></span>
+				<span class="col row s12">地址：<strong ng-bind="stationInfo.address"></strong></span>
+				<span class="col row s12">乘车人数：<strong ng-bind="stationInfo.num"></strong></span>
 			</div>
 			<div class="card-action">
-				<a href="javascript:void(0)">删除</a>
-				<a href="javascript:void(0)">修改</a>
-				<a href="javascript:void(0)">查看乘车人员</a>
+				<a href="javascript:void(0)" class="card-delete">删除</a>
+				<a href="javascript:void(0)" class="card-update">修改</a>
+				<a href="javascript:void(0)" ng-click="showLevel09()">查看乘车人员</a>
 			</div>
 		</div>
 	</div>
@@ -106,15 +106,15 @@
 		</div>
 		<div class="card blue-grey darken-1">
 			<div class="card-content white-text">
-				<span class="card-title">杭州列车停车点</span>
+				<span class="card-title" ng-bind="stopStationInfo.name"></span>
 				<br>
-				<span class="col row s12">编号：<strong>2016003</strong></span>
-				<span class="col row s12">名称：<strong>杭州列车停车点</strong></span>
-				<span class="col row s12">地址：<strong>杭州电子科技大学生活区南门</strong></span>
+				<span class="col row s12">编号：<strong ng-bind="stopStationInfo.id"></strong></span>
+				<span class="col row s12">名称：<strong ng-bind="stopStationInfo.name"></strong></span>
+				<span class="col row s12">地址：<strong ng-bind="stopStationInfo.address"></strong></span>
 			</div>
 			<div class="card-action">
-				<a href="javascript:void(0)">删除</a>
-				<a href="javascript:void(0)">修改</a>
+				<a href="javascript:void(0)" class="card-delete">删除</a>
+				<a href="javascript:void(0)" class="card-update">修改</a>
 				<a href="javascript:void(0)">设置为站点</a>
 			</div>
 		</div>
@@ -134,8 +134,8 @@
 				<span class="col row s12">地址：<strong>杭州电子科技大学生活区南门</strong></span>
 			</div>
 			<div class="card-action">
-				<a href="javascript:void(0)">删除</a>
-				<a href="javascript:void(0)">修改</a>
+				<a href="javascript:void(0)" class="card-delete">删除</a>
+				<a href="javascript:void(0)" class="card-update">修改</a>
 				<a href="javascript:void(0)">设置为站点</a>
 			</div>
 		</div>
@@ -161,29 +161,9 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr>
-								<td>杭电站</td>
-								<td>杭州电子科技大学南门</td>
-								<td>48</td>
-							</tr>
-							<tr>
-								<td>杭电站</td>
-								<td>杭州电子科技大学南门</td>
-								<td>48</td>
-							</tr>
-							<tr>
-								<td>杭电站</td>
-								<td>杭州电子科技大学南门</td>
-								<td>48</td>
-							</tr>
-							<tr>
-								<td>杭电站</td>
-								<td>杭州电子科技大学南门</td>
-								<td>48</td>
-							</tr>
-							<tr>
-								<td>杭电站</td>
-								<td>杭州电子科技大学南门</td>
+							<tr ng-repeat="station in stations">
+								<td ng-bind="station.name"></td>
+								<td ng-bind="station.address"></td>
 								<td>48</td>
 							</tr>
 						</tbody>
@@ -194,6 +174,44 @@
 				</div>
 			</li>
 		</ul>
+	</div>
+
+	<div id="panel-level08" class="panel" style="display:none;">
+		<div class="goback" ng-click="showLevel03()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">返回查看站点详情</a>
+		</div>
+		<div class="collapsible" data-collapsible="accordion">
+			<li>
+				<div class="collapsible-header">
+					<a href="javascript:void(0)">该站点共有<strong ng-bind="stationInfo.num"></strong>名员工</a>
+				</div>
+				<div class="collapsible-body">
+					<ul class="collection">
+						<li class="collection-item" ng-repeat="passenger in stationInfo.passengers" ng-bind="passenger.ename"></li>
+					</ul>
+				</div>
+			</li>
+		</div>
+	</div>
+
+	<div id="panel-level09" class="panel" style="display:none;">
+		<div class="goback" ng-click="showLevel04()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">返回查看站点详情</a>
+		</div>
+		<div class="collapsible" data-collapsible="accordion">
+			<li>
+				<div class="collapsible-header">
+					<a href="javascript:void(0)">该站点共有<strong ng-bind="stationInfo.num"></strong>名员工</a>
+				</div>
+				<div class="collapsible-body">
+					<ul class="collection">
+						<li class="collection-item" ng-repeat="passenger in stationInfo.passengers" ng-bind="passenger.ename"></li>
+					</ul>
+				</div>
+			</li>
+		</div>
 	</div>
 
 </div>
@@ -226,6 +244,10 @@
 <div id="delete-station" class="modal" style="width:220px;">
 	<div class="modal-content">
 		<p>确认删除站点？</p>
+		<p>
+			<input type"checkbox" id="delete-sta-and-stop">
+			<label for="delete-sta-and-stop">同时删除停车点</label>
+		</p>
 	</div>
 	<div class="modal-footer">
       <a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">取消</a>
@@ -236,17 +258,13 @@
 <div id="update-station" class="modal">
 	<div class="modal-content">
 		<form class="row">
-			<div class="input-field col s12">
+			<div class="input-field col s10 offset-s1">
 	          <input placeholder="请输入修改后的站点名称" id="update-station-name" type="text" class="validate" ng-model="updateStaInfo.name">
 	          <label for="update-station-name" class="active">站点名称</label>
 	        </div>
-	        <div class="input-field col s6">
-	          <input placeholder="请输入经度" id="update-station-lng" type="text" class="validate" ng-model="updateStaInfo.x">
+	        <div class="input-field col s10 offset-s1">
+	          <input placeholder="请输入经度" id="update-station-lng" type="text" class="validate" ng-model="updateStaInfo.address">
 	          <label for="update-station-lng" class="active">经度</label>
-	        </div>
-	        <div class="input-field col s6">
-	          <input placeholder="请输入纬度" id="update-station-lat" type="text" class="validate" ng-model="updateStaInfo.y">
-	          <label for="update-station-lat" class="active">纬度</label>
 	        </div>
 		</form>
 	</div>
@@ -286,41 +304,37 @@
 	</div>
 </div>
 
-<div id="sta-staff-date" class="modal" style="width:300px;height:600px;">
+<div id="delete-stop-sta" class="modal" style="width:220px;">
 	<div class="modal-content">
-		<form class="row">
-			<div class="input-field col s12">
-				<input type="date" class="datepicker">
-			</div>
-		</form>
+		<p>确认删除该停车点？</p>
 	</div>
 	<div class="modal-footer">
-		<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat ">取消</a>
-		<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat agree-get-sta-staff">确认</a>
-	</div>
+      <a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">取消</a>
+      <a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat agree-delete-station">确认</a>
+    </div>
 </div>
 
-<div id="success-delete" class="modal">
+<div id="success-delete" class="modal" style="width:220px;">
 	<div class="modal-content">
-		<p>删除站点成功！</p>
+		<p>删除成功！</p>
 	</div>
 	<div id="modal-footer">
 		<a href="javascrit:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
 	</div>
 </div>
 
-<div id="success-update" class="modal">
+<div id="success-update" class="modal" style="width:220px;">
 	<div class="modal-content">
-		<p>修改站点成功！</p>
+		<p>修改成功！</p>
 	</div>
 	<div id="modal-footer">
 		<a href="javascrit:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
 	</div>
 </div>
 
-<div id="success-add" class="modal">
+<div id="success-add" class="modal" style="width:220px;">
 	<div class="modal-content">
-		<p>添加站点成功！</p>
+		<p>添加成功！</p>
 	</div>
 	<div id="modal-footer">
 		<a href="javascrit:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
@@ -335,5 +349,30 @@
 			selectYears: 15
 		});
 		$('select').material_select();
+
+		$('#panel-level03').find('.card-delete').click(function(){
+			$('#delete-station').openModal();
+		});
+		$('#panel-level03').find('.card-update').click(function(){
+			$('#update-station').openModal();
+		});
+		$('#panel-level04').find('.card-delete').click(function(){
+			$('#delete-station').openModal();
+		});
+		$('#panel-level04').find('.card-update').click(function(){
+			$('#update-station').openModal();
+		});
+		$('#panel-level05').find('.card-delete').click(function(){
+			$('#delete-stop-sta').openModal();
+		});
+		$('#panel-level05').find('.card-delete').click(function(){
+			$('#delete-stop-sta').openModal();
+		});
+		$('#panel-level06').find('.card-delete').click(function(){
+			$('#delete-stop-sta').openModal();
+		});
+		$('#panel-level06').find('.card-delete').click(function(){
+			$('#delete-stop-sta').openModal();
+		});
 	})
 </script>
