--- a/src/main/webapp/public/htm/affairsShowRoutes.html
+++ b/src/main/webapp/public/htm/affairsShowRoutes.html
@@ -12,20 +12,20 @@
 		<ul class="collapsible" data-collapsible="accordion">
 			<li>
 				<div class="collapsible-header">
-					<a href="javascript:void(0)">&nbsp&nbsp&nbsp&nbsp目前，共有<strong>30</strong>条线路</a>
+					<a href="javascript:void(0)">&nbsp&nbsp&nbsp&nbsp目前，共有<strong ng-bind="routes.length"></strong>条线路</a>
 				</div>
 				<div class="collapsible-body">
 					<table>
 						<thead>
 							<tr>
-								<td>线路名称</td>
+								<td>线路ID</td>
 								<td>人数</td>
 								<td>乘坐率</td>
 							</tr>
 						</thead>
 						<tbody>
 							<tr ng-repeat="route in routes" ng-click="showLevel03()" style="cursor:pointer;">
-								<td ng-bind="route.name"></td>
+								<td ng-bind="route.id"></td>
 								<td ng-bind="route.number"></td>
 								<td ng-bind="route.rate"></td>
 							</tr>
@@ -81,14 +81,14 @@
 				<div class="collapsible-body">
 					<div class="card blue-grey darken-1">
 				        <div class="card-content white-text">
-				        	<span style="display:inline-block;width:135px;">车牌号：<strong>浙A12345</strong></span>
-				        	<span style="display:inline-block;width:135px;">驾驶员：<strong>张水峰</strong></span>
+				        	<span style="display:inline-block;width:135px;">车牌号：<strong ng-bind="theBus.license">浙A12345</strong></span>
+				        	<span style="display:inline-block;width:135px;">驾驶员：<strong ng-bind="theBus.driver">张水峰</strong></span>
 				        	<br>
-				        	<span style="display:inline-block;width:135px;">车辆品牌：<strong>金龙</strong></span>
-				        	<span style="display:inline-block;width:135px;">座位数：<strong>30</strong></span>
-				        	<span style="display:inline-block;width:100%;">注册日期：2010-10-25</span>
-				        	<span style="display:inline-block;width:100%;">保险日期：2018-04-13</span>
-							<span style="display:inline-block;width:100%;">驾驶证：123456789456123456</span>
+				        	<span style="display:inline-block;width:135px;">车辆品牌：<strong ng-bind="theBus.brand">金龙</strong></span>
+				        	<span style="display:inline-block;width:135px;">座位数：<strong ng-bind="theBus.seat">30</strong></span>
+				        	<span style="display:inline-block;width:100%;">注册日期：<strong ng-bind="theBus.logon">2010-10-25</strong></span>
+				        	<span style="display:inline-block;width:100%;">保险日期：<strong ng-bind="theBus.dated">2018-04-13</strong></span>
+							<span style="display:inline-block;width:100%;">驾驶证：<strong ng-bind="driver_license">123456789456123456</strong></span>
 				        </div>
 				        <div class="card-action">
 				            <a href="javascript:void(0)">修改车辆信息</a>
@@ -126,14 +126,14 @@
 				<div class="collapsible-body">
 					<div class="card blue-grey darken-1">
 				        <div class="card-content white-text">
-				        	<span style="display:inline-block;width:135px;">车牌号：<strong>浙A12345</strong></span>
-				        	<span style="display:inline-block;width:135px;">驾驶员：<strong>张水峰</strong></span>
+				        	<span style="display:inline-block;width:135px;">车牌号：<strong ng-bind="theBus.license">浙A12345</strong></span>
+				        	<span style="display:inline-block;width:135px;">驾驶员：<strong ng-bind="theBus.driver">张水峰</strong></span>
 				        	<br>
-				        	<span style="display:inline-block;width:135px;">车辆品牌：<strong>金龙</strong></span>
-				        	<span style="display:inline-block;width:135px;">座位数：<strong>30</strong></span>
-				        	<span style="display:inline-block;width:100%;">注册日期：2010-10-25</span>
-				        	<span style="display:inline-block;width:100%;">保险日期：2018-04-13</span>
-							<span style="display:inline-block;width:100%;">驾驶证：123456789456123456</span>
+				        	<span style="display:inline-block;width:135px;">车辆品牌：<strong ng-bind="theBus.brand">金龙</strong></span>
+				        	<span style="display:inline-block;width:135px;">座位数：<strong ng-bind="theBus.seat">30</strong></span>
+				        	<span style="display:inline-block;width:100%;">注册日期：<strong ng-bind="theBus.logon">2010-10-25</strong></span>
+				        	<span style="display:inline-block;width:100%;">保险日期：<strong ng-bind="theBus.dated">2018-04-13</strong></span>
+							<span style="display:inline-block;width:100%;">驾驶证：<strong ng-bind="driver_license">123456789456123456</strong></span>
 				        </div>
 				        <div class="card-action">
 				            <a href="javascript:void(0)">修改车辆信息</a>
@@ -167,8 +167,8 @@
 			<div class="card-content white-text">
 				<span class="card-title">杭州东站</span>
 				<br>
-				<span style="display:inline-block;width:135px;">乘车人数：<strong>11</strong></span>
-				<span style="display:inline-block;width:135px;">到站时间：<strong>8:14</strong></span>
+				<span style="display:inline-block;width:135px;">乘车人数：<strong ng-bind="theSta.num">11</strong></span>
+				<span style="display:inline-block;width:135px;">到站时间：<strong ng-bind="theSta.date">8:14</strong></span>
 			</div>
 			<div class="card-action">
 				<a href="javascript:void(0)" class="btn">删除</a>
@@ -194,8 +194,8 @@
 			<div class="card-content white-text">
 				<span class="card-title">杭州东站</span>
 				<br>
-				<span style="display:inline-block;width:135px;">乘车人数：<strong>11</strong></span>
-				<span style="display:inline-block;width:135px;">到站时间：<strong>8:14</strong></span>
+				<span style="display:inline-block;width:135px;">乘车人数：<strong ng-bind="theSta.num">11</strong></span>
+				<span style="display:inline-block;width:135px;">到站时间：<strong ng-bind="theSta.date">8:14</strong></span>
 			</div>
 			<div class="card-action">
 				<a href="javascript:void(0)" class="btn">删除</a>
@@ -214,6 +214,15 @@
 	<!-- <div id="add-route" class="tooltipped" data-position="right" data-delay="50" data-tooltip="新增路线">
 		<i class="material-icons center">add_circle_outline</i>
 	</div> -->
+</div>
+
+<div id="success-change" class="modal" style="width:220px;">
+	<div class="modal-content">
+		<p>路线修改成功！</p>
+	</div>
+	<div class="modal-footer">
+		<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
+	</div>
 </div>
 
 <script type="text/javascript">
